k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: anamnesis-api
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: anamnesis.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: anamnesis-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anamnesis-web
                port:
                  name: http
